[package]
name = "twitchvod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.144", features = ["derive"] }
url = "2.3.1"
anyhow = "1.0.64"
ureq = "2.5.0"
serde_json = "1.0.85"
dialoguer = "0.10.2"
new_string_template = "1.4.0"
serde_yaml = "0.9.13"
directories = "4.0.1"
